recommendations and fixed cropped area in profile

--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -2118,3 +2118,8 @@ span.removeNewImage
     text-align: center;
     display: none;
 }
+.profile-card button a
+{
+    color: inherit;
+
+}
